@@ -60,6 +60,14 @@
 	* arilev0.d (mulu16): Cast the operands from uint16 to uint32, to force
 	a zero-extend before the asm-coded instructions.
 
+2018-01-14  Bruno Haible  <bruno@clisp.org>
+
+	Enable most optimizations on Linux/ia64.
+	* Makefile.devel (multibuild-linux-ia64): Enable all build variants
+	that work.
+	* makemake.in (XCFLAGS): For Linux/ia64, enable all optimizations
+	except ASM.
+
 2018-01-13  Bruno Haible  <bruno@clisp.org>
 
 	Improve framepointerp in GENERIC64C_HEAPCODES model.
